--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -34,3 +34,9 @@ services:
     class: Ydle\NodesBundle\Form\Type\NodeType
     tags:
         - { name: form.type, alias: node_form }
+          
+  validator.unique.ismaster:
+      class: Ydle\NodesBundle\Validator\Constraints\IsMasterValidator
+      arguments: ['@service_container']
+      tags:
+          - { name: validator.constraint_validator, alias: master_validator }
